# clud

./: .clud  .clud.example  .env.example  .gitignore  AGENTS.md  AUDIT_SUMMARY.md  Backlog.md  CHANGELOG.md  CLAUDE.md  CLAUD_DOCKER.dockerfile  CODEX.md  CODE_AUDIT_REPORT.md  COMPLETION_REPORT.md  COMPREHENSIVE_VERIFICATION.sh  CREDENTIAL_INTEGRATION_REPORT.md  CREDENTIAL_INTEGRATION_SUMMARY.md  Cargo.toml  DEVELOPMENT_LOG.md  DOCKER_PLUGINS.md  Dockerfile  EXAMPLES.md  FEASIBILITY_REPORT_CLAUDE_CLI_AUTO_INSTALL.md  FEASIBILITY_SUMMARY.md  FEATURE.md  FINAL_IMPLEMENTATION_REPORT.md  FINAL_SUMMARY.txt  IMPLEMENTATION_GUIDE_NPX_FALLBACK.md  IMPLEMENTATION_SUMMARY.md  LICENSE  LOOP.md  MANIFEST.in  MESSAGING_AGENT_FEASIBILITY_REPORT.md  MESSAGING_INDEX.md  MESSAGING_INTEGRATION_GUIDE.md  MESSAGING_QUICK_START.md  MESSAGING_SETUP.md  MISSION.md  OPEN_VS_CODE_SERVER_DOCKER.dockerfile  PLAN.md  README.md  (+39 more)
.claude/: settings.json  settings.local.json
.clud/: settings.json
.codex/: hooks.json
bench/: README.md  __init__.py
ci/: README.md  (+14 more)
crates/clud-bin/: Cargo.toml  README.md  build.rs
crates/clud-bin/assets/: README.md
crates/clud-bin/assets/dashboard/: index.html
crates/clud-bin/assets/scripts/: extract_zip.py
crates/clud-bin/assets/skills/: README.md
crates/clud-bin/assets/skills/clud-do/: SKILL.md
crates/clud-bin/assets/skills/clud-docker-linux-build/: README.md  SKILL.md
crates/clud-bin/assets/skills/clud-docker-mac-x86/: SKILL.md
crates/clud-bin/assets/skills/clud-docker-recover/: README.md  SKILL.md
crates/clud-bin/assets/skills/clud-docker-rust-app/: README.md  SKILL.md
crates/clud-bin/assets/skills/clud-docker-rust-app-dev/: README.md  SKILL.md
crates/clud-bin/assets/skills/clud-extern-repos/: SKILL.md
crates/clud-bin/assets/skills/clud-fix/: README.md  SKILL.md
crates/clud-bin/assets/skills/clud-fix-quick/: SKILL.md
crates/clud-bin/assets/skills/clud-git/: SKILL.md
crates/clud-bin/assets/skills/clud-git-diff/: SKILL.md
crates/clud-bin/assets/skills/clud-improve/: README.md  SKILL.md
crates/clud-bin/assets/skills/clud-issue/: README.md  SKILL.md
crates/clud-bin/assets/skills/clud-issue-triage/: README.md  SKILL.md
crates/clud-bin/assets/skills/clud-loop/: README.md  SKILL.md
crates/clud-bin/assets/skills/clud-pr/: README.md  SKILL.md
crates/clud-bin/assets/skills/clud-python-lint-deadcode/: SKILL.md
crates/clud-bin/assets/skills/clud-review/: SKILL.md
crates/clud-bin/assets/skills/clud-tag-release/: README.md  SKILL.md
crates/clud-bin/assets/skills/clud-windows-trash/: README.md  SKILL.md
crates/clud-bin/assets/tools/docker/: README.md  docker-build.py  docker_build_cpp.py  docker_build_python.py  docker_build_soldr.py  docker_recover.py
crates/clud-bin/assets/tools/git/: clud-git-diff.py
crates/clud-bin/assets/tools/github/: pr_merge_watch.py
crates/clud-bin/assets/tools/hooks/: block-bad-cmd.py  telemetry.py  uv_run_hook_guard.py
crates/clud-bin/assets/tools/python/: lint_deadcode.py
crates/clud-bin/schema/: memory_v1.sql  memory_v2.sql
crates/clud-bin/src/: README.md  args.rs  args_tests.rs  backend.rs  backend_bootstrap.rs  block_bad_cmd.rs  block_bad_cmd_rollout.rs  capture.rs  clud_settings.rs  codex_hook_normalize.rs  codex_hook_normalize_tests.rs  command.rs  config.rs  console_input.rs  console_setup.rs  console_title.rs  cpu_banner.rs  crash_report.rs  ctrl_c_track.rs  daemon.rs  dnd.rs  gc.rs  gc_daemon.rs  gc_tests.rs  graphics.rs  hook_health.rs  hook_health_tests.rs  hooks.rs  hooks_tests.rs  job_orphan_reaper.rs  large_file_guard.rs  launch_log.rs  launch_setup.rs  lib.rs  log_event.rs  loop_artifacts.rs  loop_check.rs  loop_spec.rs  main.rs  mcp_bridge.rs  (+48 more)
crates/clud-bin/src/command/: README.md  builder.rs  loop_task.rs  mod.rs  prompts.rs  tests.rs  types.rs
crates/clud-bin/src/daemon/: README.md  attach.rs  client.rs  commands.rs  conhost_reaper.rs  daemon_events.rs  entry.rs  gc_service.rs  http.rs  io_helpers.rs  keys.rs  memory_client.rs  memory_mcp.rs  memory_service.rs  mod.rs  paths.rs  proc_sampler.rs  process_utils.rs  rp_broker.rs  server.rs  session_tmp_sweep.rs  sessions.rs  target_sweep.rs  top.rs  types.rs  uv_cache_sweep.rs  watch_service.rs  wire_prost.rs  worker.rs  worker_shared.rs
crates/clud-bin/src/daemon/gc_service/: extern_repo.rs  filesystem.rs  tests.rs
crates/clud-bin/src/daemon/gc_service/tests/: parallel.rs
crates/clud-bin/src/daemon/http/: tests.rs
crates/clud-bin/src/daemon/rp_broker/: endpoint.rs  errors.rs  frame_lane.rs  mod.rs  payload.rs  tests.rs  wire_mode.rs
crates/clud-bin/src/daemon/wire_prost/: daemon_msgs.rs  error.rs  frame.rs  mod.rs  session.rs  tests.rs  worker_msgs.rs
crates/clud-bin/src/dnd/: README.md  console_drop_target.rs  console_drop_target_tests.rs  dropfiles.rs  injectors.rs  mod.rs
crates/clud-bin/src/gc/: cli.rs  mod.rs  reconcile.rs  registry.rs  scanner.rs  session_tmp.rs  target_sweep.rs  uv_cache.rs
crates/clud-bin/src/hook_health/: codex_trust.rs  inspect.rs  mod.rs  prompts.rs  repairs.rs  types.rs  utils.rs  warnings.rs
crates/clud-bin/src/memory/: README.md  cli.rs  error.rs  git_artifact.rs  identity.rs  ids.rs  lexical.rs  mcp_config.rs  mcp_config_tests.rs  mod.rs  paths.rs  schema.rs  search.rs  store.rs  tiers.rs
crates/clud-bin/src/memory/embedder/: README.md  local.rs  mod.rs  remote.rs  test_embedder.rs
crates/clud-bin/src/session/: bracketed_paste.rs  interrupt.rs
crates/clud-bin/src/shell/: README.md  git_bash_resolver.rs  mod.rs
crates/clud-bin/src/voice/: README.md  audio.rs  config.rs  cues.rs  linux_capture.rs  mod.rs  mode.rs  model.rs  recording.rs  worker.rs
crates/clud-bin/tests/: README.md  crash_report.rs  ctrlc_signal_kinds.rs  ctrlc_windows_events.rs  orphan_reap.rs  pty_behavior.rs  pty_pump.rs  shift_enter_dual_reader.rs  symbols.rs  telemetry_endpoint.rs  utf8_codepage.rs  wedge_watchdog_e2e.rs  win32_hooking_probe.rs
crates/clud-bin/tests/common/: mod.rs
dylints/ban_manual_slash_normalize/: Cargo.toml
dylints/ban_manual_slash_normalize/src/: allowlist.txt  lib.rs
(+529 files in other folders)
