[workspace]
resolver = "2"
members = [
    "crates/clud-bin",
    "testbins/mock-agent",
]

[workspace.package]
version = "2.0.16"
edition = "2021"
rust-version = "1.85"
license-file = "LICENSE"
repository = "https://github.com/zackees/clud"
homepage = "https://github.com/zackees/clud"

[profile.dev]
debug = 0

[profile.release]
debug = 0

[patch.crates-io]
whisper-rs = { path = "vendor/whisper-rs" }
whisper-rs-sys = { path = "vendor/whisper-rs-sys" }
