[workspace]
resolver = "2"
members = [
    "crates/clud-bin",
    "testbins/mock-agent",
]

[workspace.package]
version = "2.2.0"
edition = "2021"
rust-version = "1.85"
license-file = "LICENSE"
repository = "https://github.com/zackees/clud"
homepage = "https://github.com/zackees/clud"

[profile.dev]
debug = "line-tables-only"

[profile.release]
debug = "line-tables-only"

[patch.crates-io]
whisper-rs = { path = "vendor/whisper-rs" }
whisper-rs-sys = { path = "vendor/whisper-rs-sys" }
