[package]
name = "clud"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Fast CLI for running Claude Code and Codex in YOLO mode"

[dependencies]
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ctrlc = "3"
# Issue #13: voice-mode stack. Linux capture shells out to `arecord` on
# F3 press so libasound is loaded only by that on-demand helper process,
# not by every `clud --help` / `clud --version` startup. Windows and macOS
# keep the in-process cpal/rodio path below.
# `whisper-rs` is gated below — see the target-specific stanza for the
# aarch64-pc-windows-msvc carve-out.
# Issue #13: model auto-downloader needs a per-OS cache dir resolver,
# a small blocking HTTP client, and a hash verifier. `ureq` is sync and
# avoids dragging in a tokio runtime just to fetch one file.
dirs = "5"
sha2 = "0.10"
ureq = { version = "2", default-features = false, features = ["tls"] }
# Issue #73 / #110: embedded KV store for the session and tracked-entry
# registries. `redb` is pure Rust (no bundled C toolchain), single-writer
# at the file level, and ships its own file locking — replaces the
# previous `rusqlite` (bundled SQLite) dependency to cut cold-build time
# and drop the C-toolchain pressure on CI.
redb = "2"
running-process-core = "3.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"
terminal_size = "0.4"
toml_edit = "0.25.11"
vt100 = "0.16"
vte = "0.15"
wasmi = "0.40.0"
which = "7"

[dev-dependencies]
tempfile = "3"

[lib]
name = "clud"
path = "src/lib.rs"

[[test]]
name = "pty_behavior"
path = "tests/pty_behavior.rs"

# Issue #13 follow-up: the vendored `whisper-rs-sys` C++ source does not
# compile on `aarch64-pc-windows-msvc` (no clean fix at the vendor level).
# Gate the Rust dependency off on that one target so the rest of the
# matrix still builds; voice transcription is stubbed out on Windows ARM
# (see `voice.rs`).
[target.'cfg(not(all(target_arch = "aarch64", target_os = "windows")))'.dependencies]
whisper-rs = "0.16"

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.16"
rodio = { version = "0.21", default-features = false, features = ["playback"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
# Issue #79 (Part A) — Windows IDropTarget COM registration on the console
# window so dragged files reach `clud` even when conhost would refuse the
# drop. Pinned to the same major as transitively present in the lockfile
# (windows-0.61.3) to avoid introducing a second copy of the crate graph.
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
] }
# Required so the `windows_core::Result` / `windows_core::Ref` types
# referenced in our `IDropTarget_Impl` signatures (and the
# `#[implement]` proc-macro re-exported as `windows::core::implement`)
# resolve through a stable path. The umbrella `windows` crate also
# re-exports them as `windows::core::*` but having the direct dep is
# the documented pattern for `#[implement]` users.
windows-core = "0.61"

[[bin]]
name = "clud"
path = "src/main.rs"
