[package]
name = "clud"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Fast CLI for running Claude Code and Codex in YOLO mode"

[dependencies]
arboard = "3"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
# Native crash handler for SIGSEGV / SIGBUS / SIGILL / SIGFPE / SIGABRT
# on Unix and structured exceptions on Windows. By default it does NOT
# attach a SIGINT / CTRL_C_EVENT handler, so the existing `ctrlc`-based
# Ctrl-C path (#372 / `ctrl_c_track`) remains the authoritative handler
# for Ctrl-C / Ctrl-Break.
crash-handler = "0.7"
ctrlc = "3"
# Issue #13: voice-mode stack. Linux capture shells out to `arecord` on
# F3 press so libasound is loaded only by that on-demand helper process,
# not by every `clud --help` / `clud --version` startup. Windows and macOS
# keep the in-process cpal/rodio path below.
# `whisper-rs` is gated below — see the target-specific stanza for the
# aarch64-pc-windows-msvc carve-out.
# Issue #13: model auto-downloader needs a per-OS cache dir resolver,
# a small blocking HTTP client, and a hash verifier. `ureq` is sync and
# avoids dragging in a tokio runtime just to fetch one file.
dirs = "5"
# Issue #132: gitignore-aware repo walk for the startup large-file guard.
# Matches the major version ripgrep / fd use; no feature flags needed.
ignore = "0.4"
sha2 = "0.10"
ureq = { version = "2", default-features = false, features = ["tls"] }
# Issue #73 / #110: embedded KV store for the session and tracked-entry
# registries. `redb` is pure Rust (no bundled C toolchain), single-writer
# at the file level, and ships its own file locking — replaces the
# previous `rusqlite` (bundled SQLite) dependency to cut cold-build time
# and drop the C-toolchain pressure on CI.
redb = "2"
# Issue #138: cross-platform advisory file lock used to serialize concurrent
# redb opens of the session registry, and to serialize gc-daemon bringup.
# redb itself takes an exclusive per-process file lock — two `clud`
# processes that open the registry at the same time would otherwise race
# and one would fail with `DatabaseAlreadyOpen`. The lockfile narrows
# the redb-open window to a few milliseconds at startup/shutdown so
# concurrent launches serialize cleanly.
fs4 = "0.13"
running-process = { version = "4.3.0", default-features = false, features = ["telemetry", "client", "originator-scan"] }
# running-process consumer adoption (upstream #385): the daemon's broker
# v1 frame lane binds a local-socket endpoint (named pipe on Windows,
# unix socket elsewhere) alongside the legacy TCP listener. Pinned to
# the same major as running-process's own `interprocess` dep so stream
# types are identical across the API boundary.
interprocess = "2"
icy_sixel = "0.5"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
prost = "0.14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.37"
terminal_size = "0.4"
# Plain serde-friendly TOML deserializer. Used by the shell::git_bash_resolver
# manifest reader (issue #447); the existing toml_edit dep keeps round-trip
# editing of settings.toml, but a one-shot `toml::from_str` is the cleanest
# fit for an embedded vendor manifest.
toml = "0.8"
toml_edit = "0.25.11"
# Issue #447: pure-Rust zip extraction for the vendored Git Bash bundle.
# `deflate` is the only compression method present in git-bash-bin.zip;
# disabling default features avoids pulling bzip2/zstd C deps.
zip = { version = "2", default-features = false, features = ["deflate"] }
vt100 = "0.16"
vte = "0.15"
wasmi = "0.40.0"
which = "7"
# Issue #183: in-process HTTP listener for the `clud ui` dashboard.
# `tiny_http` is pure Rust, synchronous, and slots into the daemon's
# existing `std::thread` model without introducing tokio. The daemon
# binds a second loopback port alongside the JSON IPC listener and
# serves a tiny embedded SPA + `/state.json` from it.
tiny_http = "0.12"
# Issue #183: cross-platform browser launch for `clud ui`. Tiny crate
# (~50 LOC of platform glue: macOS `open`, Linux `xdg-open`, Windows
# `cmd /c start`). One dep beats triplicate hand-rolled code.
open = "5"
# Issue #457: split EDITOR/VISUAL-style commands such as `code --wait`
# without sending config paths through an ad hoc shell string.
shell-words = "1.1"

[dev-dependencies]
serde_yaml = "0.9"
tempfile = "3"
# #436: the `RUNNING_PROCESS_FAKE_BACKEND` seam that
# `fake_backend_seam_overrides_cached_endpoint` exercises lives behind
# running-process's off-by-default `test-seams` feature (upstream #433 R4).
# Enabling it here compiles the seam into the `cargo test` build only —
# Cargo unifies this dev-dep feature into the test harness but NOT into
# `cargo build --bin clud`, so the production binary stays seam-free per
# the upstream rule ("never compiled into production consumers").
running-process = { version = "4.3.0", default-features = false, features = ["telemetry", "client", "originator-scan", "test-seams"] }

[build-dependencies]
prost-build = "0.14"
protox = "0.9"

[lib]
name = "clud"
path = "src/lib.rs"

[[test]]
name = "pty_behavior"
path = "tests/pty_behavior.rs"

# Issue #13 follow-up: the vendored `whisper-rs-sys` C++ source does not
# compile on `aarch64-pc-windows-msvc` (no clean fix at the vendor level).
# Gate the Rust dependency off on that one target so the rest of the
# matrix still builds; voice transcription is stubbed out on Windows ARM
# (see `voice.rs`).
[target.'cfg(not(all(target_arch = "aarch64", target_os = "windows")))'.dependencies]
whisper-rs = "0.16"

[target.'cfg(not(target_os = "linux"))'.dependencies]
cpal = "0.16"
rodio = { version = "0.21", default-features = false, features = ["playback"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
signal-hook = "0.3"

[target.'cfg(target_os = "windows")'.dependencies]
# Issue #79 (Part A) — Windows IDropTarget COM registration on the console
# window so dragged files reach `clud` even when conhost would refuse the
# drop. Pinned to the same major as transitively present in the lockfile
# (windows-0.61.3) to avoid introducing a second copy of the crate graph.
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_DataExchange",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_Memory",
    "Win32_System_Ole",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
# Required so the `windows_core::Result` / `windows_core::Ref` types
# referenced in our `IDropTarget_Impl` signatures (and the
# `#[implement]` proc-macro re-exported as `windows::core::implement`)
# resolve through a stable path. The umbrella `windows` crate also
# re-exports them as `windows::core::*` but having the direct dep is
# the documented pattern for `#[implement]` users.
windows-core = "0.61"

[[bin]]
name = "clud"
path = "src/main.rs"

# Slice 1 of #406 / #409: tiny PATH-resolved relay that lives at
# `~/.clud/state/shims/python` etc. so any `python` invocation inside a
# clud session goes through the daemon's ResolveInterpreter RPC.
# Currently shares clud-bin's dep tree; the size-budget enforcement +
# release-shim profile lands in slice 4 (#412) when the binary is
# bundled into wheels.
[[bin]]
name = "clud-shim"
path = "src/bin/clud_shim.rs"

[[bin]]
name = "clud-block-bad-cmd"
path = "src/bin/clud_block_bad_cmd.rs"
